// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Engagement form fields Additional details form matches snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="pf-c-form__group"
      >
        <div
          class="pf-c-form__group-label"
        >
          <label
            class="pf-c-form__label"
            for="additional_details"
          >
            <span
              class="pf-c-form__label-text"
            >
              Additional Information
            </span>
          </label>
           
        </div>
        <div
          class="pf-c-form__group-control"
        >
          <textarea
            aria-invalid="false"
            aria-label="Additional provisioning information"
            class="pf-c-form-control pf-m-resize-vertical"
            data-testid="additional-details-text-area"
            disabled=""
            id="additional_details"
            name="additional_details"
            placeholder="Provide additional details"
          >
            Additional information here
          </textarea>
          
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="pf-c-form__group"
    >
      <div
        class="pf-c-form__group-label"
      >
        <label
          class="pf-c-form__label"
          for="additional_details"
        >
          <span
            class="pf-c-form__label-text"
          >
            Additional Information
          </span>
        </label>
         
      </div>
      <div
        class="pf-c-form__group-control"
      >
        <textarea
          aria-invalid="false"
          aria-label="Additional provisioning information"
          class="pf-c-form-control pf-m-resize-vertical"
          data-testid="additional-details-text-area"
          disabled=""
          id="additional_details"
          name="additional_details"
          placeholder="Provide additional details"
        >
          Additional information here
        </textarea>
        
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Engagement form fields Cloud provider form matches snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="pf-c-form__group"
      >
        <div
          class="pf-c-form__group-label"
        >
          <label
            class="pf-c-form__label"
            for="Hosting Platform"
          >
            <span
              class="pf-c-form__label-text"
            >
              Hosting Type
            </span>
          </label>
           
        </div>
        <div
          class="pf-c-form__group-control"
        >
          <select
            aria-invalid="false"
            class="pf-c-form-control"
            data-ouia-component-id="0"
            data-ouia-component-type="PF4/FormSelect"
            data-ouia-safe="true"
            disabled=""
            required=""
          >
            <option
              class=""
              value=""
            >
              OpenShift Container Platform
            </option>
          </select>
          
        </div>
      </div>
      <div
        class="pf-c-form__group"
      >
        <div
          class="pf-c-form__group-label"
        >
          <label
            class="pf-c-form__label"
            for="cloud-provider"
          >
            <span
              class="pf-c-form__label-text"
            >
              Cloud Provider
            </span>
            <span
              aria-hidden="true"
              class="pf-c-form__label-required"
            >
               
              *
            </span>
          </label>
           
        </div>
        <div
          class="pf-c-form__group-control"
        >
          <select
            aria-invalid="false"
            aria-label="Cloud Provider"
            class="pf-c-form-control"
            data-ouia-component-id="1"
            data-ouia-component-type="PF4/FormSelect"
            data-ouia-safe="true"
            data-testid="cloud-provider-select"
            disabled=""
            id="cloud_provider_dropdown"
            required=""
          >
            <option
              class=""
              value=""
            >
              Select a provider
            </option>
            <option
              class=""
              data-cy="AWS"
              value="ec2"
            >
              AWS
            </option>
          </select>
          
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="pf-c-form__group"
    >
      <div
        class="pf-c-form__group-label"
      >
        <label
          class="pf-c-form__label"
          for="Hosting Platform"
        >
          <span
            class="pf-c-form__label-text"
          >
            Hosting Type
          </span>
        </label>
         
      </div>
      <div
        class="pf-c-form__group-control"
      >
        <select
          aria-invalid="false"
          class="pf-c-form-control"
          data-ouia-component-id="0"
          data-ouia-component-type="PF4/FormSelect"
          data-ouia-safe="true"
          disabled=""
          required=""
        >
          <option
            class=""
            value=""
          >
            OpenShift Container Platform
          </option>
        </select>
        
      </div>
    </div>
    <div
      class="pf-c-form__group"
    >
      <div
        class="pf-c-form__group-label"
      >
        <label
          class="pf-c-form__label"
          for="cloud-provider"
        >
          <span
            class="pf-c-form__label-text"
          >
            Cloud Provider
          </span>
          <span
            aria-hidden="true"
            class="pf-c-form__label-required"
          >
             
            *
          </span>
        </label>
         
      </div>
      <div
        class="pf-c-form__group-control"
      >
        <select
          aria-invalid="false"
          aria-label="Cloud Provider"
          class="pf-c-form-control"
          data-ouia-component-id="1"
          data-ouia-component-type="PF4/FormSelect"
          data-ouia-safe="true"
          data-testid="cloud-provider-select"
          disabled=""
          id="cloud_provider_dropdown"
          required=""
        >
          <option
            class=""
            value=""
          >
            Select a provider
          </option>
          <option
            class=""
            data-cy="AWS"
            value="ec2"
          >
            AWS
          </option>
        </select>
        
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Engagement form fields Cloud provider region form matches snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="pf-c-form__group"
      >
        <div
          class="pf-c-form__group-label"
        >
          <label
            class="pf-c-form__label"
            for="cloud-provider-region"
          >
            <span
              class="pf-c-form__label-text"
            >
              Provider Region
            </span>
            <span
              aria-hidden="true"
              class="pf-c-form__label-required"
            >
               
              *
            </span>
          </label>
           
        </div>
        <div
          class="pf-c-form__group-control"
        >
          <select
            aria-invalid="false"
            aria-label="Cloud provider region"
            class="pf-c-form-control"
            data-ouia-component-id="4"
            data-ouia-component-type="PF4/FormSelect"
            data-ouia-safe="true"
            data-testid="provider-region-select"
            disabled=""
            id="cloud_provider_region_dropdown"
          >
            <option
              class=""
              value=""
            >
              Select a region
            </option>
            <option
              class=""
              data-cy="nva"
              disabled=""
              value="nva"
            >
              N. Virginia
            </option>
          </select>
          
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="pf-c-form__group"
    >
      <div
        class="pf-c-form__group-label"
      >
        <label
          class="pf-c-form__label"
          for="cloud-provider-region"
        >
          <span
            class="pf-c-form__label-text"
          >
            Provider Region
          </span>
          <span
            aria-hidden="true"
            class="pf-c-form__label-required"
          >
             
            *
          </span>
        </label>
         
      </div>
      <div
        class="pf-c-form__group-control"
      >
        <select
          aria-invalid="false"
          aria-label="Cloud provider region"
          class="pf-c-form-control"
          data-ouia-component-id="4"
          data-ouia-component-type="PF4/FormSelect"
          data-ouia-safe="true"
          data-testid="provider-region-select"
          disabled=""
          id="cloud_provider_region_dropdown"
        >
          <option
            class=""
            value=""
          >
            Select a region
          </option>
          <option
            class=""
            data-cy="nva"
            disabled=""
            value="nva"
          >
            N. Virginia
          </option>
        </select>
        
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Engagement form fields Cluster size form matches snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="pf-c-form__group"
      >
        <div
          class="pf-c-form__group-label"
        >
          <label
            class="pf-c-form__label"
            for="cluster-size"
          >
            <span
              class="pf-c-form__label-text"
            >
              Cluster Size
            </span>
            <span
              aria-hidden="true"
              class="pf-c-form__label-required"
            >
               
              *
            </span>
          </label>
           
        </div>
        <div
          class="pf-c-form__group-control"
        >
          <select
            aria-invalid="false"
            aria-label="Cluster Size"
            class="pf-c-form-control"
            data-ouia-component-id="6"
            data-ouia-component-type="PF4/FormSelect"
            data-ouia-safe="true"
            data-testid="cluster-size-select"
            disabled=""
            id="cluster_size_dropdown"
            required=""
          >
            <option
              class=""
              value=""
            >
              Select cluster size
            </option>
            <option
              class=""
              data-cy="Small"
              value="small"
            >
              Small
            </option>
          </select>
          
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="pf-c-form__group"
    >
      <div
        class="pf-c-form__group-label"
      >
        <label
          class="pf-c-form__label"
          for="cluster-size"
        >
          <span
            class="pf-c-form__label-text"
          >
            Cluster Size
          </span>
          <span
            aria-hidden="true"
            class="pf-c-form__label-required"
          >
             
            *
          </span>
        </label>
         
      </div>
      <div
        class="pf-c-form__group-control"
      >
        <select
          aria-invalid="false"
          aria-label="Cluster Size"
          class="pf-c-form-control"
          data-ouia-component-id="6"
          data-ouia-component-type="PF4/FormSelect"
          data-ouia-safe="true"
          data-testid="cluster-size-select"
          disabled=""
          id="cluster_size_dropdown"
          required=""
        >
          <option
            class=""
            value=""
          >
            Select cluster size
          </option>
          <option
            class=""
            data-cy="Small"
            value="small"
          >
            Small
          </option>
        </select>
        
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Engagement form fields Location form matches snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="pf-c-form__group"
      >
        <div
          class="pf-c-form__group-label"
        >
          <label
            class="pf-c-form__label"
            for="engagement-location"
          >
            <span
              class="pf-c-form__label-text"
            >
              Location
            </span>
          </label>
           
        </div>
        <div
          class="pf-c-form__group-control"
        >
          <input
            aria-invalid="false"
            class="pf-c-form-control"
            data-cy="location_field"
            data-testid="location-field"
            disabled=""
            id="location"
            name="location"
            placeholder="e.g. Pasadena, CA"
            type="text"
            value="Nashville, TN"
          />
          <div
            aria-live="polite"
            class="pf-c-form__helper-text"
            id="engagement-location-helper"
          >
            Where will this be held?
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="pf-c-form__group"
    >
      <div
        class="pf-c-form__group-label"
      >
        <label
          class="pf-c-form__label"
          for="engagement-location"
        >
          <span
            class="pf-c-form__label-text"
          >
            Location
          </span>
        </label>
         
      </div>
      <div
        class="pf-c-form__group-control"
      >
        <input
          aria-invalid="false"
          class="pf-c-form-control"
          data-cy="location_field"
          data-testid="location-field"
          disabled=""
          id="location"
          name="location"
          placeholder="e.g. Pasadena, CA"
          type="text"
          value="Nashville, TN"
        />
        <div
          aria-live="polite"
          class="pf-c-form__helper-text"
          id="engagement-location-helper"
        >
          Where will this be held?
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Engagement form fields OpenShift Version form matches snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="pf-c-form__group"
      >
        <div
          class="pf-c-form__group-label"
        >
          <label
            class="pf-c-form__label"
            for="openshift-provider"
          >
            <span
              class="pf-c-form__label-text"
            >
              OpenShift Version
            </span>
            <span
              aria-hidden="true"
              class="pf-c-form__label-required"
            >
               
              *
            </span>
          </label>
           
        </div>
        <div
          class="pf-c-form__group-control"
        >
          <select
            aria-invalid="false"
            aria-label="OpenShift Version"
            class="pf-c-form-control"
            data-ouia-component-id="8"
            data-ouia-component-type="PF4/FormSelect"
            data-ouia-safe="true"
            data-testid="oc-version-select"
            disabled=""
            id="oc_version_dropdown"
          >
            <option
              class=""
              value=""
            >
              Select OpenShift version
            </option>
            <option
              class=""
              data-cy="4.1.41"
              value="4.1.41"
            >
              v4.1
            </option>
            <option
              class=""
              data-cy="4.2.34"
              value="4.2.34"
            >
              v4.2
            </option>
            <option
              class=""
              data-cy="4.3.26"
              value="4.3.26"
            >
              v4.3
            </option>
            <option
              class=""
              data-cy="4.4.10"
              value="4.4.10"
            >
              v4.4
            </option>
          </select>
          
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="pf-c-form__group"
    >
      <div
        class="pf-c-form__group-label"
      >
        <label
          class="pf-c-form__label"
          for="openshift-provider"
        >
          <span
            class="pf-c-form__label-text"
          >
            OpenShift Version
          </span>
          <span
            aria-hidden="true"
            class="pf-c-form__label-required"
          >
             
            *
          </span>
        </label>
         
      </div>
      <div
        class="pf-c-form__group-control"
      >
        <select
          aria-invalid="false"
          aria-label="OpenShift Version"
          class="pf-c-form-control"
          data-ouia-component-id="8"
          data-ouia-component-type="PF4/FormSelect"
          data-ouia-safe="true"
          data-testid="oc-version-select"
          disabled=""
          id="oc_version_dropdown"
        >
          <option
            class=""
            value=""
          >
            Select OpenShift version
          </option>
          <option
            class=""
            data-cy="4.1.41"
            value="4.1.41"
          >
            v4.1
          </option>
          <option
            class=""
            data-cy="4.2.34"
            value="4.2.34"
          >
            v4.2
          </option>
          <option
            class=""
            data-cy="4.3.26"
            value="4.3.26"
          >
            v4.3
          </option>
          <option
            class=""
            data-cy="4.4.10"
            value="4.4.10"
          >
            v4.4
          </option>
        </select>
        
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Engagement form fields Persistent storage form matches snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="pf-c-form__group"
      >
        <div
          class="pf-c-form__group-label"
        >
          <label
            class="pf-c-form__label"
            for="persistent-storage-needs"
          >
            <span
              class="pf-c-form__label-text"
            >
              Persistent Storage Needs
            </span>
            <span
              aria-hidden="true"
              class="pf-c-form__label-required"
            >
               
              *
            </span>
          </label>
           
        </div>
        <div
          class="pf-c-form__group-control"
        >
          <select
            aria-invalid="false"
            aria-label="Persistent Storage Needs"
            class="pf-c-form-control"
            data-ouia-component-id="10"
            data-ouia-component-type="PF4/FormSelect"
            data-ouia-safe="true"
            data-testid="persistent-storage-select"
            disabled=""
            id="persistent_storage_dropdown"
          >
            <option
              class=""
              data-cy="none"
              value="none"
            >
              None
            </option>
            <option
              class=""
              data-cy="50G"
              value="50G"
            >
              50GB
            </option>
            <option
              class=""
              data-cy="100G"
              value="100G"
            >
              100GB
            </option>
            <option
              class=""
              data-cy="250G"
              value="250G"
            >
              250GB
            </option>
            <option
              class=""
              data-cy="500G"
              value="500G"
            >
              500GB
            </option>
          </select>
          
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="pf-c-form__group"
    >
      <div
        class="pf-c-form__group-label"
      >
        <label
          class="pf-c-form__label"
          for="persistent-storage-needs"
        >
          <span
            class="pf-c-form__label-text"
          >
            Persistent Storage Needs
          </span>
          <span
            aria-hidden="true"
            class="pf-c-form__label-required"
          >
             
            *
          </span>
        </label>
         
      </div>
      <div
        class="pf-c-form__group-control"
      >
        <select
          aria-invalid="false"
          aria-label="Persistent Storage Needs"
          class="pf-c-form-control"
          data-ouia-component-id="10"
          data-ouia-component-type="PF4/FormSelect"
          data-ouia-safe="true"
          data-testid="persistent-storage-select"
          disabled=""
          id="persistent_storage_dropdown"
        >
          <option
            class=""
            data-cy="none"
            value="none"
          >
            None
          </option>
          <option
            class=""
            data-cy="50G"
            value="50G"
          >
            50GB
          </option>
          <option
            class=""
            data-cy="100G"
            value="100G"
          >
            100GB
          </option>
          <option
            class=""
            data-cy="250G"
            value="250G"
          >
            250GB
          </option>
          <option
            class=""
            data-cy="500G"
            value="500G"
          >
            500GB
          </option>
        </select>
        
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Engagement form fields Subdomain form matches snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="pf-c-form__group"
      >
        <div
          class="pf-c-form__group-label"
        >
          <label
            class="pf-c-form__label"
            for="subdomain"
          >
            <span
              class="pf-c-form__label-text"
            >
              Desired Subdomain
            </span>
            <span
              aria-hidden="true"
              class="pf-c-form__label-required"
            >
               
              *
            </span>
          </label>
           
        </div>
        <div
          class="pf-c-form__group-control"
        >
          <input
            aria-invalid="false"
            class="pf-c-form-control"
            data-cy="desired_subdomain_input"
            data-testid="subdomain-input"
            disabled=""
            id="ocp_sub_domain"
            name="ocp_sub_domain"
            required=""
            type="text"
            value="ordoabchao"
          />
          <div>
            Applications will live at: 
            <strong>
              ordoabchao.na-1.rht-labs.com
            </strong>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="pf-c-form__group"
    >
      <div
        class="pf-c-form__group-label"
      >
        <label
          class="pf-c-form__label"
          for="subdomain"
        >
          <span
            class="pf-c-form__label-text"
          >
            Desired Subdomain
          </span>
          <span
            aria-hidden="true"
            class="pf-c-form__label-required"
          >
             
            *
          </span>
        </label>
         
      </div>
      <div
        class="pf-c-form__group-control"
      >
        <input
          aria-invalid="false"
          class="pf-c-form-control"
          data-cy="desired_subdomain_input"
          data-testid="subdomain-input"
          disabled=""
          id="ocp_sub_domain"
          name="ocp_sub_domain"
          required=""
          type="text"
          value="ordoabchao"
        />
        <div>
          Applications will live at: 
          <strong>
            ordoabchao.na-1.rht-labs.com
          </strong>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
